# starlink-analytics-meltano

./: Makefile  README.md  query.sql
starlink-analytics/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  meltano.yml  pyproject.toml
starlink-analytics/orchestrate/: __init__.py
starlink-analytics/orchestrate/dags/: meltano_spacexapi_daily.py
starlink-analytics/tap-spacexapi/: README.md  meltano.yml  pyproject.toml
starlink-analytics/tap-spacexapi/tap_spacexapi/: client.py  streams.py  tap.py
starlink-analytics/tap-spacexapi/tap_spacexapi/schemas/: launch.json  starlink.json
starlink-analytics/tap-spacexapi/tests/: test_core.py
starlink-analytics/transform/models/tap_spacexapi/: source.yml  starlink_launches.sql
